<resources>
    <string name="app_name">Telemedicine</string>
    <string name="default_storage_file">storage.json</string>

    <!-- UI values -->
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="urgent">Urgent</string>
    <string name="very_urgent">Very Urgent</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="request">Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="your_username">Your Username</string>
    <string name="your_password">Your Password</string>
    <string name="your_email">Your Email</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="your_name">Your Name</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="your_location">Your Location</string>

    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="location">Location</string>
    <string name="location_address">Location/Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday">Birthday</string>
    <string name="birthday_format">yyyy/mm/dd</string>
    <string name="disease">Disease</string>
    <string name="description">Description</string>
    <string name="short_description">Short Description</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="describe_here">Describe Here</string>
    <string name="what_is_your_illness">What is your illness</string>
    <string name="where_is_your_location">Where is your location</string>
    <string name="doctor">Doctor</string>

    <string name="request_details">Request Details</string>
    <string name="no_notifications">No notifications</string>
    <string name="your_request_has_been_approved">Your Request Has Been Approved</string>

    <!-- Custom default values -->
    <string name="default_rating">5.0</string>
    <string name="johndoe">johndoe</string>
    <string name="john_doe">John Doe</string>
    <string name="john_doe_email">john@doe.com</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="st_lorem_ipsum">St. Lorem Ipsum</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, conse ctetur adipiscing elit, t. Ut enim ad veni am, quis nostrud exercitation ullamco</string>
    <string name="_000000000">000000000</string>

</resources>
