<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/proximanova_semibold"
                android:padding="20dp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/very_urgent"
                android:textSize="18sp"
                app:cornerRadius="32dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/proximanova_semibold"
                android:text="@string/name"
                android:textSize="19sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxCornerRadiusBottomEnd="@dimen/outline_button_radius"
                app:boxCornerRadiusBottomStart="@dimen/outline_button_radius"
                app:boxCornerRadiusTopEnd="@dimen/outline_button_radius"
                app:boxCornerRadiusTopStart="@dimen/outline_button_radius"
                app:boxStrokeColor="@color/lightBlue"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/consult_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_name"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/lightBlue"
                    android:textColorHint="@color/lightBlue" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/proximanova_semibold"
                android:text="@string/disease"
                android:textSize="19sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxCornerRadiusBottomEnd="@dimen/outline_button_radius"
                app:boxCornerRadiusBottomStart="@dimen/outline_button_radius"
                app:boxCornerRadiusTopEnd="@dimen/outline_button_radius"
                app:boxCornerRadiusTopStart="@dimen/outline_button_radius"
                app:boxStrokeColor="@color/lightBlue"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/consult_disease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/what_is_your_illness"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/lightBlue"
                    android:textColorHint="@color/lightBlue" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/proximanova_semibold"
                android:text="@string/location"
                android:textSize="19sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxCornerRadiusBottomEnd="@dimen/outline_button_radius"
                app:boxCornerRadiusBottomStart="@dimen/outline_button_radius"
                app:boxCornerRadiusTopEnd="@dimen/outline_button_radius"
                app:boxCornerRadiusTopStart="@dimen/outline_button_radius"
                app:boxStrokeColor="@color/lightBlue"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/consult_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/where_is_your_location"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/lightBlue"
                    android:textColorHint="@color/lightBlue" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/proximanova_semibold"
                android:text="@string/description_optional"
                android:textSize="19sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxCornerRadiusBottomEnd="@dimen/outline_button_radius"
                app:boxCornerRadiusBottomStart="@dimen/outline_button_radius"
                app:boxCornerRadiusTopEnd="@dimen/outline_button_radius"
                app:boxCornerRadiusTopStart="@dimen/outline_button_radius"
                app:boxStrokeColor="@color/lightBlue"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/consult_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/describe_here"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:scrollbars="vertical"
                    android:textColor="@color/lightBlue"
                    android:textColorHint="@color/lightBlue" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/consult_request"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:background="?attr/selectableItemBackground"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/proximanova_semibold"
                android:padding="20dp"
                android:text="@string/request"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="32dp"
                app:rippleColor="@color/primaryLight" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>