<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DoctorDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/doc_photo"
                    android:layout_width="86dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/john_doe" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/doc_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanova_semibold"
                        android:text="@string/john_doe"
                        android:textColor="#37474e"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/doc_specs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanova_regular_italic"
                        android:text="@string/lorem_ipsum"
                        android:textColor="@color/colorPrimary"
                        android:textSize="8pt" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:tint="@color/yellow"
                            app:srcCompat="@drawable/ic_star" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:tint="@color/yellow"
                            app:srcCompat="@drawable/ic_star" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:tint="@color/yellow"
                            app:srcCompat="@drawable/ic_star" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:tint="@color/yellow"
                            app:srcCompat="@drawable/ic_star" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="10dp"
                            android:tint="@color/yellow"
                            app:srcCompat="@drawable/ic_star" />

                        <TextView
                            android:id="@+id/doc_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:fontFamily="@font/proximanova_regular"
                            android:text="@string/default_rating"
                            android:textAlignment="textEnd"
                            android:textColor="@color/lightBlue"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#618FA4AD" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/proximanova_semibold"
                android:text="@string/short_description"
                android:textColor="#38474f"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/doc_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/proximanova_regular"
                android:text="@string/lorem_ipsum_long"
                android:textColor="#607c8a"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/proximanova_semibold"
                android:text="@string/location"
                android:textColor="#38474f"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/location_icon"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:tint="@color/lightBlue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_location" />

                <TextView
                    android:id="@+id/doc_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_weight=".5"
                    android:fontFamily="@font/proximanova_regular"
                    android:text="@string/st_lorem_ipsum"
                    android:textColor="@color/lightBlue"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/location_icon"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/map_image" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="60dp"
                android:background="?attr/selectableItemBackground"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/proximanova_semibold"
                android:padding="20dp"
                android:text="@string/request"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="32dp"
                app:rippleColor="@color/primaryLight" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>